# Neural-Shader-JIT-Compiler

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  HACKATHON_PLAN.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
shaders/: dark_fantasy.glsl  fragment.glsl  medicine.glsl  persona.glsl  space.glsl
src/: main.cpp
